Add community resource status notice
Added a notice about community resource status and potential unavailability.

--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
 
     <div class="card good">
       <p><strong>Trusted community source:</strong></p>
+      <p>⚠️ Community Resource Status Notice
+
+Some third‑party community resources may become unavailable without notice.
+This can be due to hosting issues, certificate revocation, infrastructure changes, or other external factors.
+
+Jailbreak University does not control or operate third‑party sites.</p>
       <p>
         <a href="https://jailbreaks.app" target="_blank" rel="noopener noreferrer">
           https://jailbreaks.app
